<resources>
    <string name="app_name">Finalproject_Prototype1</string>
    <!--Home Page - press play strings-->
    <string name="main_Title">Pattern CopyCat</string>
    <string name="main_Subtitle">Are Your Eyes Fast Enough To Beat The CopyCat?</string>
    <string name="main_btnLabel">Press Play and Tilt To Win!</string>
    <string name="home_btnAction_Play">PLAY</string>
    <!--Game Over - screen-->
    <string name="GmOver_Title">GAME OVER</string>
    <string name="GmOver_ScoreLabel">Your Score : </string>
    <string name="GmOver_PlayAgain">PLAY AGAIN</string>
    <string name="GmOver_leaderBrd">LEADERBOARD</string>
    <!--High Scores/ leaderboard screen-->
    <string name="HScr_Back">BACK</string>
    <string name="HScr_notGood">You are still not better than me</string>
</resources>